refactor: update progress groups syntax

--- a/src/pug/views/index.pug
+++ b/src/pug/views/index.pug
@@ -204,7 +204,7 @@ block view
               hr.mt-0
               .progress-group.mb-4
                 .progress-group-prepend
-                  span.progress-group-text
+                  span.text-medium-emphasis.small
                     | Monday
                 .progress-group-bars
                   .progress.progress-xs
@@ -213,7 +213,7 @@ block view
                     .progress-bar.bg-danger(role='progressbar', style='width: 78%', aria-valuenow='78', aria-valuemin='0', aria-valuemax='100')
               .progress-group.mb-4
                 .progress-group-prepend
-                  span.progress-group-text
+                  span.text-medium-emphasis.small
                     | Tuesday
                 .progress-group-bars
                   .progress.progress-xs
@@ -222,7 +222,7 @@ block view
                     .progress-bar.bg-danger(role='progressbar', style='width: 94%', aria-valuenow='94', aria-valuemin='0', aria-valuemax='100')
               .progress-group.mb-4
                 .progress-group-prepend
-                  span.progress-group-text
+                  span.text-medium-emphasis.small
                     | Wednesday
                 .progress-group-bars
                   .progress.progress-xs
@@ -231,7 +231,7 @@ block view
                     .progress-bar.bg-danger(role='progressbar', style='width: 67%', aria-valuenow='67', aria-valuemin='0', aria-valuemax='100')
               .progress-group.mb-4
                 .progress-group-prepend
-                  span.progress-group-text
+                  span.text-medium-emphasis.small
                     | Thursday
                 .progress-group-bars
                   .progress.progress-xs
@@ -240,7 +240,7 @@ block view
                     .progress-bar.bg-danger(role='progressbar', style='width: 91%', aria-valuenow='91', aria-valuemin='0', aria-valuemax='100')
               .progress-group.mb-4
                 .progress-group-prepend
-                  span.progress-group-text
+                  span.text-medium-emphasis.small
                     | Friday
                 .progress-group-bars
                   .progress.progress-xs
@@ -249,7 +249,7 @@ block view
                     .progress-bar.bg-danger(role='progressbar', style='width: 73%', aria-valuenow='73', aria-valuemin='0', aria-valuemax='100')
               .progress-group.mb-4
                 .progress-group-prepend
-                  span.progress-group-text
+                  span.text-medium-emphasis.small
                     | Saturday
                 .progress-group-bars
                   .progress.progress-xs
@@ -258,7 +258,7 @@ block view
                     .progress-bar.bg-danger(role='progressbar', style='width: 82%', aria-valuenow='82', aria-valuemin='0', aria-valuemax='100')
               .progress-group.mb-4
                 .progress-group-prepend
-                  span.progress-group-text
+                  span.text-medium-emphasis.small
                     | Sunday
                 .progress-group-bars
                   .progress.progress-xs
@@ -282,7 +282,7 @@ block view
               hr.mt-0
               .progress-group
                 .progress-group-header
-                  svg.icon.progress-group-icon
+                  svg.icon.icon-lg.me-2
                     use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
                   div Male
                   .ms-auto.fw-semibold 43%
@@ -291,7 +291,7 @@ block view
                     .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
               .progress-group.mb-5
                 .progress-group-header
-                  svg.icon.progress-group-icon
+                  svg.icon.icon-lg.me-2
                     use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user-female")
                   div Female
                   .ms-auto.fw-semibold 37%
@@ -300,7 +300,7 @@ block view
                     .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
               .progress-group
                 .progress-group-header
-                  svg.icon.progress-group-icon
+                  svg.icon.icon-lg.me-2
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-google")
                   div Organic Search
                   .ms-auto.fw-semibold.me-2 191.235
@@ -310,7 +310,7 @@ block view
                     .progress-bar.bg-success(role='progressbar', style='width: 56%', aria-valuenow='56', aria-valuemin='0', aria-valuemax='100')
               .progress-group
                 .progress-group-header
-                  svg.icon.progress-group-icon
+                  svg.icon.icon-lg.me-2
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-facebook-f")
                   div Facebook
                   .ms-auto.fw-semibold.me-2 51.223
@@ -320,7 +320,7 @@ block view
                     .progress-bar.bg-success(role='progressbar', style='width: 15%', aria-valuenow='15', aria-valuemin='0', aria-valuemax='100')
               .progress-group
                 .progress-group-header
-                  svg.icon.progress-group-icon
+                  svg.icon.icon-lg.me-2
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-twitter")
                   div Twitter
                   .ms-auto.fw-semibold.me-2 37.564
@@ -330,7 +330,7 @@ block view
                     .progress-bar.bg-success(role='progressbar', style='width: 11%', aria-valuenow='11', aria-valuemin='0', aria-valuemax='100')
               .progress-group
                 .progress-group-header
-                  svg.icon.progress-group-icon
+                  svg.icon.icon-lg.me-2
                     use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-linkedin")
                   div LinkedIn
                   .ms-auto.fw-semibold.me-2 27.319
