--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 * CoreUI - Free Bootstrap Admin Template
-* @version v4.0.0-alpha.1
+* @version v4.0.0-alpha.2
 * @link https://coreui.io
 * Copyright (c) 2021 creativeLabs Łukasz Holeczek
 * Licensed under MIT (https://coreui.io/license)
@@ -359,7 +359,7 @@
               <div class="d-flex justify-content-between">
                 <div>
                   <h4 class="card-title mb-0">Traffic</h4>
-                  <div class="small text-medium-emphasis">September 2019</div>
+                  <div class="small text-medium-emphasis">January 2021</div>
                 </div>
                 <div class="btn-toolbar d-none d-md-block" role="toolbar" aria-label="Toolbar with buttons">
                   <div class="btn-group btn-group-toggle mx-3" data-coreui-toggle="buttons">
@@ -521,7 +521,7 @@
                       <!-- /.row-->
                       <hr class="mt-0">
                       <div class="progress-group mb-4">
-                        <div class="progress-group-prepend"><span class="progress-group-text">Monday</span></div>
+                        <div class="progress-group-prepend"><span class="text-medium-emphasis small">Monday</span></div>
                         <div class="progress-group-bars">
                           <div class="progress progress-xs">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 34%" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100"></div>
@@ -532,7 +532,7 @@
                         </div>
                       </div>
                       <div class="progress-group mb-4">
-                        <div class="progress-group-prepend"><span class="progress-group-text">Tuesday</span></div>
+                        <div class="progress-group-prepend"><span class="text-medium-emphasis small">Tuesday</span></div>
                         <div class="progress-group-bars">
                           <div class="progress progress-xs">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 56%" aria-valuenow="56" aria-valuemin="0" aria-valuemax="100"></div>
@@ -543,7 +543,7 @@
                         </div>
                       </div>
                       <div class="progress-group mb-4">
-                        <div class="progress-group-prepend"><span class="progress-group-text">Wednesday</span></div>
+                        <div class="progress-group-prepend"><span class="text-medium-emphasis small">Wednesday</span></div>
                         <div class="progress-group-bars">
                           <div class="progress progress-xs">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 12%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100"></div>
@@ -554,7 +554,7 @@
                         </div>
                       </div>
                       <div class="progress-group mb-4">
-                        <div class="progress-group-prepend"><span class="progress-group-text">Thursday</span></div>
+                        <div class="progress-group-prepend"><span class="text-medium-emphasis small">Thursday</span></div>
                         <div class="progress-group-bars">
                           <div class="progress progress-xs">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 43%" aria-valuenow="43" aria-valuemin="0" aria-valuemax="100"></div>
@@ -565,7 +565,7 @@
                         </div>
                       </div>
                       <div class="progress-group mb-4">
-                        <div class="progress-group-prepend"><span class="progress-group-text">Friday</span></div>
+                        <div class="progress-group-prepend"><span class="text-medium-emphasis small">Friday</span></div>
                         <div class="progress-group-bars">
                           <div class="progress progress-xs">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 22%" aria-valuenow="22" aria-valuemin="0" aria-valuemax="100"></div>
@@ -576,7 +576,7 @@
                         </div>
                       </div>
                       <div class="progress-group mb-4">
-                        <div class="progress-group-prepend"><span class="progress-group-text">Saturday</span></div>
+                        <div class="progress-group-prepend"><span class="text-medium-emphasis small">Saturday</span></div>
                         <div class="progress-group-bars">
                           <div class="progress progress-xs">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 53%" aria-valuenow="53" aria-valuemin="0" aria-valuemax="100"></div>
@@ -587,7 +587,7 @@
                         </div>
                       </div>
                       <div class="progress-group mb-4">
-                        <div class="progress-group-prepend"><span class="progress-group-text">Sunday</span></div>
+                        <div class="progress-group-prepend"><span class="text-medium-emphasis small">Sunday</span></div>
                         <div class="progress-group-bars">
                           <div class="progress progress-xs">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 9%" aria-valuenow="9" aria-valuemin="0" aria-valuemax="100"></div>
@@ -618,7 +618,7 @@
                       <hr class="mt-0">
                       <div class="progress-group">
                         <div class="progress-group-header">
-                          <svg class="icon progress-group-icon">
+                          <svg class="icon icon-lg me-2">
                             <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user"></use>
                           </svg>
                           <div>Male</div>
@@ -632,7 +632,7 @@
                       </div>
                       <div class="progress-group mb-5">
                         <div class="progress-group-header">
-                          <svg class="icon progress-group-icon">
+                          <svg class="icon icon-lg me-2">
                             <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user-female"></use>
                           </svg>
                           <div>Female</div>
@@ -646,7 +646,7 @@
                       </div>
                       <div class="progress-group">
                         <div class="progress-group-header">
-                          <svg class="icon progress-group-icon">
+                          <svg class="icon icon-lg me-2">
                             <use xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-google"></use>
                           </svg>
                           <div>Organic Search</div>
@@ -661,7 +661,7 @@
                       </div>
                       <div class="progress-group">
                         <div class="progress-group-header">
-                          <svg class="icon progress-group-icon">
+                          <svg class="icon icon-lg me-2">
                             <use xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-facebook-f"></use>
                           </svg>
                           <div>Facebook</div>
@@ -676,7 +676,7 @@
                       </div>
                       <div class="progress-group">
                         <div class="progress-group-header">
-                          <svg class="icon progress-group-icon">
+                          <svg class="icon icon-lg me-2">
                             <use xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-twitter"></use>
                           </svg>
                           <div>Twitter</div>
@@ -691,7 +691,7 @@
                       </div>
                       <div class="progress-group">
                         <div class="progress-group-header">
-                          <svg class="icon progress-group-icon">
+                          <svg class="icon icon-lg me-2">
                             <use xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-linkedin"></use>
                           </svg>
                           <div>LinkedIn</div>
